[package]
name = "midi-types"
version = "0.1.3"
edition = "2021"
rust-version = "1.56.0"

authors = ["Mendelt Siebenga <msiebenga@gmail.com>", "Alex Norman <alex@x37v.info>"]
license = "MIT/Apache-2.0"
description = "Types for representing midi messages"
repository = "https://github.com/rust-midi/midi-types"
categories = ["no-std", "api-bindings", "multimedia::audio"]
keywords = ["midi"]
readme = "README.md"

[dependencies]
defmt = {version = "0.3.2", optional = true}
